<resources>
    <string name="app_name">Unitally</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Calculate</string>

    <!-- Navigation Strings -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_group_templates">Templates</string>
    <string name="ls_import_template">Import Template</string>
    <string name="ls_save_as_template">Save As Template</string>
    <string name="nav_group_units">Units</string>
    <string name="ls_create_new_unit">Create New Unit</string>
    <string name="ls_edit_unit">Review Unit</string>
    <string name="nav_group_projects">Projects</string>
    <string name="ls_save_project">Save Project</string>
    <string name="ls_load_project">Load Project</string>
    <string name="ls_add_project_to_unit">Add Project To Unit</string>
    <string name="ls_miscellaneous">Miscellaneous</string>
    <string name="ls_settings">Settings</string>
    <string name="ls_about">About</string>
    <string name="ls_subtract">Subtract</string>
    <string name="ls_add">add</string>
    <string name="ls_addunit_background">addunit background</string>
    <string name="ls_addunit_button">Add Items</string>
    <string name="create_unit_hint">Enter Unit Name Here</string>
    <string name="ls_cancel">Cancel</string>
    <string name="ls_save">Save</string>
    <string name="create_unit_warning_text">You cannot add any subunits yet. Create your lower tier units first</string>
    <string name="ls_edit">Edit</string>
    <string name="ls_delete">Delete</string>
    <string name="ls_subunits">Subunits</string>
    <string name="edit_unit_name">New Name</string>

    <!-- Menu Strings -->
    <string name="abc_sort">A-Z sort</string>
    <string name="count_sort">count sort</string>
    <string name="menu_filter">filter</string>
    <string name="view_action_search">Action Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_as_unit">Save As Unit</string>
    <string name="ls_clear">Clear</string>
    <string name="category_creation_hint">The \"Create\" button will create and add a new Category</string>
    <string name="ls_edit_category">Edit Category</string>
    <string name="nav_header_categories">Categories</string>
</resources>
